# app/Modules/computerPeripherals/DTO/UpdatePeripheralsDTO.php
@@ -1,0 +1,17 @@
+<?php
+
+namespace App\Modules\computerPeripherals\DTO;
+
+class UpdatePeripheralsDTO
+{
+   public $product_id;
+   public $image;
+   public $description;
+
+   public function __construct($product_id, $image,  $description)
+   {
+       $this->product_id = $product_id;
+       $this->image = $image;
+       $this->description = $description;
+   }
+}
