# app/Modules/computerPeripherals/Requests/ComputerPeripheralsRequest.php
@@ -1,0 +1,34 @@
+<?php
+
+namespace App\Modules\computerPeripherals\Requests;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class computerPeripheralsRequest extends FormRequest
+{
+
+      /**
+     * Determine if the user is authorized to make this request.
+     *
+     * @return bool
+     */
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array
+     */
+    public function rules()
+    {
+        return [
+            'product_id' => 'required',
+            'image' => 'required',
+            'description' => 'required',   
+        ];
+    }
+
+}
